# learn_framework

./: README.md
boost_util_test/: CMakeLists.txt  README.md  makefile.pre  test_for_test.cpp  test_io.cpp  testingsetup.cpp  testingsetup.h
boostthreadcontrol/: CMakeLists.txt  README.md  main.cpp  makefile.pre  sync.cpp  task_check.cpp  task_check.h
learnclickhouse/: CMakeLists.txt
learnclickhouse/src/: main.cpp
learneth/: CMakeLists.txt
learneth/src/: main.cpp  open_ecc.cpp
learnopenssl/: CMakeLists.txt
learnopenssl/include/: open_ecc.h
learnopenssl/src/: main.cpp
learntorrent/: CMakeLists.txt
learntorrent/include/: dht.h  peer.h  tracker.h  util.h
learntorrent/src/: dht.cpp  main.cpp  peer.cpp  tracker.cpp
producer_consumer_librdkafka/consumer/: main.c  makefile
producer_consumer_librdkafka/consumer_cpp/: cconsumer.cpp  cconsumer.h  consumer_cpp.pro  main.cpp
producer_consumer_librdkafka/producer/: main.c  makefile
